# log-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  correlate.py  detect_bruteforce.py  parse_apache.py  parse_authlog.py  parse_syslog.py  parse_windows.py  parser_base.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: ci.yml
log_analyzer/: __init__.py  cli.py  correlator.py  detectors.py  parsers.py  reporter.py
notes/: ideas.txt
tests/: test_cli.py  test_correlator.py  test_detectors.py  test_parsers.py  test_reporter.py
